--- a/index.html
+++ b/index.html
@@ -54,61 +54,83 @@
 <form class="box" onsubmit="sendOrder(event)">
 
   <input id="player" placeholder="Player ID" required>
-  <input id="server" placeholder="Server ID" required>
+<input id="server" placeholder="Server ID" required>
+<input id="mobile" placeholder="Mobile Number" required>
 
   <select id="state" required>
-    <option value="">Select State</option>
-    <option>Andhra Pradesh</option>
-    <option>Assam</option>
-    <option>Bihar</option>
-    <option>Delhi</option>
-    <option>Gujarat</option>
-    <option>Karnataka</option>
-    <option>Maharashtra</option>
-    <option>Tamil Nadu</option>
-    <option>West Bengal</option>
-    <option>Other</option>
+  <option value="">Select State</option>
+  <option>Andhra Pradesh</option>
+  <option>Arunachal Pradesh</option>
+  <option>Assam</option>
+  <option>Bihar</option>
+  <option>Chhattisgarh</option>
+  <option>Goa</option>
+  <option>Gujarat</option>
+  <option>Haryana</option>
+  <option>Himachal Pradesh</option>
+  <option>Jharkhand</option>
+  <option>Karnataka</option>
+  <option>Kerala</option>
+  <option>Madhya Pradesh</option>
+  <option>Maharashtra</option>
+  <option>Manipur</option>
+  <option>Meghalaya</option>
+  <option>Mizoram</option>
+  <option>Nagaland</option>
+  <option>Odisha</option>
+  <option>Punjab</option>
+  <option>Rajasthan</option>
+  <option>Sikkim</option>
+  <option>Tamil Nadu</option>
+  <option>Telangana</option>
+  <option>Tripura</option>
+  <option>Uttar Pradesh</option>
+  <option>Uttarakhand</option>
+  <option>West Bengal</option>
+  <option>Delhi</option>
+</select>
+
+  <select id="pack" required onchange="updateQR()">
+  <option value="">Select Pack</option>
+
+  <!-- PASSES -->
+  <option value="qr-weekly.png">Weekly Pass – ₹133</option>
+  <option value="qr-twilight.png">Twilight Pass – ₹790</option>
+  <option value="qr-starlight.png">Starlight Card</option>
+
+  <!-- SMALL -->
+  <option value="qr-3.png">3 Diamonds – ₹8</option>
+  <option value="qr-5.png">5 Diamonds – ₹12</option>
+  <option value="qr-11.png">11 Diamonds – ₹23</option>
+  <option value="qr-22.png">22 Diamonds – ₹35</option>
+
+  <!-- MEDIUM -->
+  <option value="qr-55.png">55 Diamonds – ₹81</option>
+  <option value="qr-86.png">86 Diamonds – ₹118</option>
+  <option value="qr-112.png">112 Diamonds – ₹155</option>
+  <option value="qr-172.png">172 Diamonds – ₹227</option>
+  <option value="qr-257.png">257 Diamonds – ₹319</option>
+
+  <!-- LARGE -->
+  <option value="qr-514.png">514 Diamonds – ₹637</option>
+  <option value="qr-706.png">706 Diamonds – ₹855</option>
+  <option value="qr-1050.png">1050 Diamonds – ₹1275</option>
+  <option value="qr-1135.png">1135 Diamonds – ₹1385</option>
+  <option value="qr-2195.png">2195 Diamonds – ₹2560</option>
+  <option value="qr-3688.png">3688 Diamonds – ₹4475</option>
+  <option value="qr-5532.png">5532 Diamonds – ₹6450</option>
+  <option value="qr-9288.png">9288 Diamonds – ₹10950</option>
   </select>
 
-  <select id="pack" required>
-    <option value="">Select Pack</option>
-
-    <option>Weekly Pass – ₹133</option>
-    <option>2× Weekly Pass – ₹266</option>
-    <option>Starlight Card – ₹265</option>
-    <option>Twilight Pass – ₹790</option>
-
-    <option>3 Diamonds – ₹8</option>
-    <option>5 Diamonds – ₹12</option>
-    <option>11 Diamonds – ₹23</option>
-    <option>22 Diamonds – ₹35</option>
-
-    <option>56 Diamonds – ₹81</option>
-    <option>86 Diamonds – ₹118</option>
-    <option>112 Diamonds – ₹155</option>
-    <option>172 Diamonds – ₹227</option>
-    <option>257 Diamonds – ₹319</option>
-
-    <option>514 Diamonds – ₹637</option>
-    <option>706 Diamonds – ₹855</option>
-    <option>1050 Diamonds – ₹1275</option>
-    <option>1135 Diamonds – ₹1385</option>
-    <option>2195 Diamonds – ₹2560</option>
-    <option>3688 Diamonds – ₹4475</option>
-    <option>5532 Diamonds – ₹6450</option>
-    <option>9288 Diamonds – ₹10950</option>
-  </select>
-
-  <input id="upi" placeholder="UPI Transaction ID" required>
+    <input id="upi" placeholder="UPI Transaction ID" required>
   <input id="mobile" placeholder="Mobile Number" required>
   <input id="customer_email" type="email" placeholder="Customer Email" required>
 
   <button type="submit">Submit Order</button>
 
-  <!-- ADMIN ONLY -->
-  <button type="button" class="admin-btn" onclick="sendSuccess()">
-    Send Top-Up Success (Admin)
-  </button>
+<button type="button" id="successBtn" class="admin-btn" onclick="sendSuccess()" style="display:none;">
+Send Top-Up Success (Admin)
+</button>
 
 </form>
 
@@ -123,8 +145,7 @@ function sendOrder(e) {
       player_id: player.value,
       server_id: server.value,
       state: state.value,
-      pack: pack.value,
-      upi: upi.value,
+      pack: pack.options[pack.selectedIndex].text,     upi: upi.value,
       mobile: mobile.value,
       email: "storeeveryday26@gmail.com"
     }
