--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@ button {
 .qr-box {
   text-align:center;
   margin-top:20px;
-}
 .qr-box img {
-  width:260px;
-  display:none;
-  border-radius:12px;
+  width: 260px;
+  border-radius: 12px;
+  margin-top: 15px;
 }
 .note {
   font-size:12px;
@@ -125,6 +124,5 @@ function updateQR() {
   }
 }
 </script>
-
 </body>
 </html>
