--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ button {
   <img id="qrImage">
 </div>
 
-<button type="submit">Order After Payment</button>
+<button type="button">Order After Payment</button>
 
 </form>
 
