--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ button {
 <div class="container">
 <h2>Everyday Store</h2>
 
-<form>
+<form onsubmit="return false;">
 
 <input placeholder="MLBB Player ID" required>
 <input placeholder="Server ID" required>
