--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@ button {
   font-weight:bold;
 }
 .qr-box {
-  text-align:center;
+  text-align: center;
   margin-top:20px;
+}
 .qr-box img {
   width: 260px;
   border-radius: 12px;
   margin-top: 15px;
+  pointer-events: none;
 }
 .note {
   font-size:12px;
