--- a/index.html
+++ b/index.html
@@ -35,22 +35,25 @@ select, input {
   color:white;
 }
 button {
-  background:#22c55e;
-  color:black;
-  font-weight:bold;
+  background: #22c55e;
+  color: black;
+  font-weight: bold;
+  position: relative;
+  z-index: 10;
 }
 .qr-box {
   text-align: center;
-  margin-top:20px;
+  margin-top: 20px;
+  margin-bottom: 20px; /* 👈 IMPORTANT */
 }
 .qr-box img {
   width: 100%;
-  max-width: 260px;   /* controls max size */
+  max-width: 260px;
   height: auto;
   border-radius: 12px;
-  margin: 15px auto 0;
+  margin: 15px auto;
   display: block;
-  pointer-events: none;
+  pointer-events: none;   /* 👈 stops QR blocking clicks */
 }
 .note {
   font-size:12px;
