--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@ button {
 .qr-box {
   text-align: center;
   margin-top: 20px;
-  margin-bottom: 20px; /* 👈 IMPORTANT */
+  margin-bottom: 20px;
 }
 .qr-box img {
   width: 100%;
-  max-width: 260px;
+  max-width: 180px;
   height: auto;
   border-radius: 12px;
-  margin: 15px auto;
+  margin: 10px auto;
+  display: block;
   pointer-events: none;
 }
 .note {
