--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@ button {
   z-index: 10;
 }
 .qr-box {
-  text-align: center;
+  display: flex;
+  justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
 .qr-box img {
-  width: 100%;
-  max-width: 180px;
+  width: 180px !important;
+  max-width: 180px !important;
   height: auto;
   border-radius: 12px;
-  margin: 10px auto;
+  margin: 12px auto;
   display: block;
   pointer-events: none;
 }
