--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@ button {
 
 .qr-box img {
   width: 180px !important;
+  height: 180px !important;
   max-width: 180px !important;
-  height: auto;
+  max-height: 180px !important;
+  object-fit: contain;
   border-radius: 12px;
-  margin: 12px auto;
   display: block;
-  pointer-events: none;
 }
 .note {
   font-size:12px;
@@ -108,10 +108,9 @@ button {
   <option value="qr-9288.png">9288 Diamonds – ₹10950</option>
 </select>
 
-<div> class="qr-box">
+<div class="qr-box">
   <img id="qrImage" style="display:none;" />
 </div>
-
 <div class="note">
 📷 QR will appear automatically after selecting a pack
 </div>
@@ -154,7 +153,7 @@ function sendOrder() {
 </script>
 
 
-</form>
+</</form>
 
 
 <div class="note">
