--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@ button {
   margin-top: 20px;
   margin-bottom: 20px;
 }
-
-.qr-box img {
-  
+ 
+  .qr-box img {
   width: 180px !important;
   height: 180px !important;
   max-width: 180px !important;
@@ -57,6 +56,7 @@ button {
   object-fit: contain;
   border-radius: 12px;
   display: block;
+  pointer-events: none;
 }
 .note {
   font-size:12px;
