--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Everyday Store – MLBB Top-Up</title>
+<title>Everyday Store - MLBB Top-Up</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -11,6 +11,7 @@ body {
   font-family: Arial, sans-serif;
   color:#fff;
 }
+
 .container {
   max-width:420px;
   margin:30px auto;
@@ -18,11 +19,13 @@ body {
   padding:20px;
   border-radius:12px;
 }
+
 h2 {
   text-align:center;
   margin-bottom:15px;
 }
-select, input, button {
+
+input, select, button {
   width:100%;
   padding:12px;
   margin-top:10px;
@@ -30,70 +33,67 @@ select, input, button {
   border:none;
   font-size:15px;
 }
-select, input {
+
+input, select {
   background:#1f2937;
   color:white;
 }
+
 button {
-  background: #22c55e;
-  color: black;
-  font-weight: bold;
-  position: relative;
-  z-index: 10;
+  background:#22c55e;
+  color:black;
+  font-weight:bold;
+  cursor:pointer;
 }
+
 .qr-box {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  display:flex;
+  justify-content:center;
+  margin:20px 0;
 }
- 
-  .qr-box img {
-  width: 180px !important;
-  height: 180px !important;
-  max-width: 180px !important;
-  max-height: 180px !important;
-  object-fit: contain;
-  border-radius: 12px;
-  display: block;
-  pointer-events: none;
+
+.qr-box img {
+  width:180px;
+  height:180px;
+  border-radius:12px;
 }
+
 .note {
   font-size:12px;
   color:#cbd5e1;
   text-align:center;
   margin-top:10px;
 }
-  .processing {
-  position: fixed;
-  inset: 0;
-  z-index: 5;
-  pointer-events: none;
-}
-  .social-icons {
-  display: flex;
-  justify-content: center;
-  gap: 14px;
-  margin: 16px 0;
+
+#processingBox {
+  text-align:center;
+  margin-top:10px;
+  color:#facc15;
 }
 
-.social-icons img {
-  width: 36px;
-  height: 36px;
-  border-radius: 8px;
-}
-  .customer-support {
-  text-align: center;
-  margin: 12px 0;
+.customer-support {
+  text-align:center;
+  margin:15px 0;
 }
 
 .customer-support a {
-  color: #25D366;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 14px;
+  color:#25D366;
+  text-decoration:none;
+  font-weight:bold;
 }
-  
+
+.social-icons {
+  display:flex;
+  justify-content:center;
+  gap:14px;
+  margin-top:16px;
+}
+
+.social-icons img {
+  width:36px;
+  height:36px;
+  border-radius:8px;
+}
 </style>
 </head>
 
@@ -103,31 +103,28 @@ button {
 <h2>Everyday Store</h2>
 
 <form onsubmit="return false;">
+
 <input placeholder="MLBB Player ID" required>
 <input placeholder="Server ID" required>
 <input placeholder="Mobile Number" required>
 
-<select id="pack" required onchange="updateQR()">
+<select id="pack" onchange="updateQR()" required>
   <option value="">Select Pack</option>
 
-  <!-- PASSES -->
-  <option value="qr-weekly.png">Weekly Pass – ₹133</option>
-  <option value="qr-twilight.png">Twilight Pass – ₹790</option>
-
-  <!-- SMALL -->
+  <!-- 🔥 SMALL PACKS -->
   <option value="qr-3.png">3 Diamonds – ₹8</option>
   <option value="qr-5.png">5 Diamonds – ₹12</option>
   <option value="qr-11.png">11 Diamonds – ₹23</option>
   <option value="qr-22.png">22 Diamonds – ₹35</option>
 
-  <!-- MEDIUM -->
-  <option value="qr-55.png">55 Diamonds – ₹81</option>
+  <!-- 🌈 MEDIUM PACKS -->
+  <option value="qr-56.png">56 Diamonds – ₹81</option>
   <option value="qr-86.png">86 Diamonds – ₹118</option>
   <option value="qr-112.png">112 Diamonds – ₹155</option>
   <option value="qr-172.png">172 Diamonds – ₹227</option>
   <option value="qr-257.png">257 Diamonds – ₹319</option>
 
-  <!-- LARGE -->
+  <!-- 💥 LARGE PACKS -->
   <option value="qr-514.png">514 Diamonds – ₹637</option>
   <option value="qr-706.png">706 Diamonds – ₹855</option>
   <option value="qr-1050.png">1050 Diamonds – ₹1275</option>
@@ -136,123 +133,61 @@ button {
   <option value="qr-3688.png">3688 Diamonds – ₹4475</option>
   <option value="qr-5532.png">5532 Diamonds – ₹6450</option>
   <option value="qr-9288.png">9288 Diamonds – ₹10950</option>
+
+  <!-- 🔥 WEEKLY PASS DEALS -->
+  <option value="qr-weekly-1.png">1 Weekly Pass – ₹135</option>
+  <option value="qr-weekly-172.png">Weekly Pass + 172 Diamonds – ₹360</option>
+  <option value="qr-weekly-2.png">2 Weekly Passes – ₹270</option>
+  <option value="qr-weekly-3.png">3 Weekly Passes – ₹399</option>
+  <!-- 🌟 EXCLUSIVE PASSES -->
+<option value="qr-starlight.png">Starlight Card – ₹265</option>
+<option value="qr-twilight.png">Twilight Pass – ₹790</option>
 </select>
 
-   <div class="qr-box">
-  <img id="qrImage" style="display:none;" />
-</div>
-
-<div class="note">
-  📷 QR will appear automatically after selecting a pack
+<div class="qr-box">
+  <img id="qrImage" style="display:none;">
 </div>
 
 <button type="button" onclick="sendOrder()">
-  Order After Payment
+Order After Payment
 </button>
 
-<div id="processingBox" class="processing" style="display:none;">
-  ⏳ Processing your order, please wait...
+<div id="processingBox" style="display:none;">
+⏳ Processing your order, please wait...
 </div>
-  
+
 </form>
-  
+
 <div class="customer-support">
-  <a href="https://wa.me/917679393645" target="_blank">
-    💬 Customer Support: +91 76793 93645
-  </a>
+<a href="https://wa.me/917679393645" target="_blank">
+📞 Customer Support: +91 76793 93645
+</a>
 </div>
 
-   <div class="social-icons">
-<!-- Instagram -->
-  <a href="https://www.instagram.com/everyday_store_official" target="_blank" aria-label="Instagram">
-    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
-  </a>
+<div class="social-icons">
+<a href="https://www.instagram.com/everyday_store_official" target="_blank">
+<img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
+</a>
 
-  <!-- YouTube -->
-  <a href="https://youtube.com/@everydaystore-d4w" target="_blank" aria-label="YouTube">
-    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
-  </a>
+<a href="https://youtube.com/@everydaystore-d4w" target="_blank">
+<img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
+</a>
 
-  <!-- WhatsApp Customer Support (chat) -->
-  <a href="https://wa.me/917679393645" target="_blank" aria-label="WhatsApp Chat">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp Chat">
-  </a>
-
-  <!-- WhatsApp Store / Group -->
-  <a href="https://chat.whatsapp.com/IHdIzkLFzgBJkjxjiUVBxD" target="_blank" aria-label="WhatsApp Store">
-    <img src="https://cdn-icons-png.flaticon.com/512/3670/3670051.png" alt="WhatsApp Store">
-  </a>
+<a href="https://chat.whatsapp.com/IHdIzkLFzgBJkjxjiUVBxD" target="_blank">
+<img src="https://cdn-icons-png.flaticon.com/512/3670/3670051.png">
+</a>
 </div>
 
 <div class="note">
-⚠️ Please tap SEND in Gmail to complete your order
+⚠️ Please tap <b>SEND</b> in Gmail to complete your order
 </div>
-<script>
-function sendOrder() {
 
-  // SHOW PROCESSING
-  document.getElementById("processingBox").style.display = "block";
-
-  // GET INPUTS
-  const inputs = document.querySelectorAll("input");
-  const playerID = inputs[0].value.trim();
-  const serverID = inputs[1].value.trim();
-  const mobile = inputs[2].value.trim();
-
-  const packSelect = document.getElementById("pack");
-  const packName = packSelect.options[packSelect.selectedIndex].text;
-
-  if (!playerID || !serverID || !mobile || packSelect.value === "") {
-    alert("Please fill all details and select a pack.");
-    document.getElementById("processingBox").style.display = "none";
-    return;
-  }
-
-  // CREATE ORDER ID
-  const orderID = "ORD-" + Date.now();
-
-  // SAVE ORDER LOCALLY
-  const orderData = {
-    orderID,
-    playerID,
-    serverID,
-    mobile,
-    pack: packName,
-    time: new Date().toLocaleString()
-  };
-
-  let orders = JSON.parse(localStorage.getItem("orders")) || [];
-  orders.push(orderData);
-  localStorage.setItem("orders", JSON.stringify(orders));
-
-  // EMAIL
-  const subject = encodeURIComponent("New MLBB Order");
-  const body = encodeURIComponent(
-  "New Order Received\n\n" +
-  "Order ID: " + orderID + "\n" +
-  "Player ID: " + playerID + "\n" +
-  "Server ID: " + serverID + "\n" +
-  "Mobile: " + mobile + "\n" +
-  "Pack: " + packName + "\n\n" +
-  "Payment Done via QR"
-);
-  
-  // SHOW SUCCESS
-document.getElementById("processingBox").style.display = "none";
-  document.getElementById("successBox").style.display = "block";
-  document.getElementById("orderIdText").innerText = orderID;
-
-  // OPEN GMAIL
-  setTimeout(() => {
-    window.location.href =
-      "mailto:storeeveryday26@gmail.com?subject=" + subject + "&body=" + body;
-  }, 1000);
-}
-</script>
 <div id="successBox" class="note" style="display:none;">
-  ✅ Order placed successfully!<br><br>
-  🆔 <b>Order ID:</b> <span id="orderIdText"></span><br><br>
-  Please tap <b>SEND</b> in Gmail to confirm.
+✅ Order placed successfully!<br><br>
+<b>Order ID:</b> <span id="orderIdText"></span><br><br>
+Please tap <b>SEND</b> in Gmail to confirm.
+</div>
+
 </div>
 
 <script>
@@ -267,6 +202,48 @@ function updateQR() {
     qr.style.display = "none";
   }
 }
+
+function sendOrder() {
+
+  document.getElementById("processingBox").style.display = "block";
+
+  const inputs = document.querySelectorAll("input");
+  const playerID = inputs[0].value.trim();
+  const serverID = inputs[1].value.trim();
+  const mobile = inputs[2].value.trim();
+
+  const packSelect = document.getElementById("pack");
+  const packName = packSelect.options[packSelect.selectedIndex].text;
+
+  if (!playerID || !serverID || !mobile || packSelect.value === "") {
+    alert("Please fill all details and select a pack.");
+    document.getElementById("processingBox").style.display = "none";
+    return;
+  }
+
+  const orderID = "ORD-" + Date.now();
+
+  const subject = encodeURIComponent("New MLBB Order");
+  const body = encodeURIComponent(
+    "New Order Received\n\n" +
+    "Order ID: " + orderID + "\n" +
+    "Player ID: " + playerID + "\n" +
+    "Server ID: " + serverID + "\n" +
+    "Mobile: " + mobile + "\n" +
+    "Pack: " + packName + "\n\n" +
+    "Payment Done via QR"
+  );
+
+  document.getElementById("processingBox").style.display = "none";
+  document.getElementById("successBox").style.display = "block";
+  document.getElementById("orderIdText").innerText = orderID;
+
+  setTimeout(() => {
+    window.location.href =
+    "mailto:storeeveryday26@gmail.com?subject=" + subject + "&body=" + body;
+  }, 800);
+}
 </script>
+
 </body>
 </html>
